--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nylas",
+  "name": "@towerism/nylas",
   "version": "5.3.2",
   "description": "A NodeJS wrapper for the Nylas REST API for email, contacts, and calendar.",
   "main": "lib/nylas.js",
